Change the notification daemon to swaync

--- a/hypr/configs/settings/exec.conf
+++ b/hypr/configs/settings/exec.conf
@@ -3,5 +3,5 @@ exec-once = hypridle&\
             swaybg -i ~/Pictures/Wallpaper/Ali\ Kazal\ -\ Mountain.png
 exec-once = gnome-keyring-daemon --start --components=secrets 
 exec-once = waybar & fcitx5
-exec-once = mako 
+exec-once = swaync 
 exec-once = /usr/bin/nextcloud
