--- a/hypr/configs/appearances/decoration.conf
+++ b/hypr/configs/appearances/decoration.conf
@@ -8,18 +8,23 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4
+        range = 14
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = rgba(00000045)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 2
+        passes = 2
 
         vibrancy = 0.1696
     }
 }
 
+layerrule = ignorezero, wofi
+layerrule = blur, waybar 
+layerrule = blur, wofi
+# layerrule = ignorealpha 0.5, wofi
+# layerrule = shadow, wofi
