Replace fonts to Source Sans 3

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -50,7 +50,7 @@ label {
   text = cmd[update:1000] echo "$(~/.config/Scripts/song-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
-  font_family = SF Pro Text
+  font_family = Source Sans 3
   position = 20, 512
   halign = left
   valign = center
@@ -61,7 +61,7 @@ label {
   text = cmd[update:1000] echo "$(~/.config/Scripts/network-status)‎"
   color = rgba(242, 243, 244, 0.75)
   font_size = 16
-  font_family = SF Pro Text
+  font_family = Source Sans 3
   position = -35, 512
   halign = right
   valign = center
@@ -72,7 +72,7 @@ label {
   text = cmd[update:1000] echo "$(~/.config/Scripts/battery-status)‎"
   color = rgba(242, 243, 244, 0.75)
   font_size = 19
-  font_family = SF Pro Text
+  font_family = Source Sans 3
   position = -93, 512
   halign = right
   valign = center
@@ -83,7 +83,7 @@ label {
   text = cmd[update:1000] echo "$(~/.config/Scripts/layout-status)‎"
   color = rgba(242, 243, 244, 0.75)
   font_size = 15
-  font_family = SF Pro Text
+  font_family = Source Sans 3
   position = -150, 512
   halign = right
   valign = center
@@ -94,7 +94,7 @@ label {
   text = cmd[update:1000] echo "$(date +"%A, %B %d")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
-  font_family = SF Pro Display Bold
+  font_family = Source Sans 3 Bold
   position = 0, 405
   halign = center
   valign = center
@@ -105,7 +105,7 @@ label {
   text = cmd[update:1000] echo "$(date +"%k:%M")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 93
-  font_family = SF Pro Display Bold
+  font_family = Source Sans 3 Bold
   position = 0, 310
   halign = center
   valign = center
@@ -117,7 +117,7 @@ label {
     text = $USER
     color = rgba(242, 243, 244, 0.75)
     font_size = 12
-    font_family = SF Pro Display Bold
+    font_family = Source Sans 3 Bold
     position = 0, -407
     halign = center
     valign = center
@@ -128,7 +128,7 @@ label {
     text = Enter Password
     color = rgba(242, 243, 244, 0.75)
     font_size = 10
-    font_family = SF Pro Display
+    font_family = Source Sans 3
     position = 0, -438
     halign = center
     valign = center
