--- a/hypr/configs/settings/exec.conf
+++ b/hypr/configs/settings/exec.conf
@@ -2,6 +2,5 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle&\
             swaybg -i ~/Pictures/Wallpaper/Ali\ Kazal\ -\ Mountain.png
 exec-once = gnome-keyring-daemon --start --components=secrets 
-exec-once = waybar & fcitx5
-exec-once = swaync 
+exec-once = waybar & fcitx5 & swaync
 exec-once = /usr/bin/nextcloud
