Ignore fish_variables

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-*
-
-!.gitignore
-!/hypr/
-!/hypr/**
-!/fish/
-!/fish/**
-!/nvim/
-!/nvim/**
-!/waybar/
-!/waybar/**
-!/mako/
-!/mako/**
-!/swaync/
-!/swaync/**
-!/wofi/
-!/wofi/**
+fish/fish_variables
