--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@ source = ~/.config/hypr/configs/settings/keys.conf
 source = ~/.config/hypr/configs/settings/window.conf
 source = ~/.config/hypr/configs/settings/input.conf
 source = ~/.config/hypr/configs/settings/devices.conf
-# source = ~/.config/hypr/configs/settings/environment.conf
+source = ~/.config/hypr/configs/settings/plugin.conf
 
 # Appearance
 source = ~/.config/hypr/configs/appearances/general.conf
