--- a/hypr/configs/settings/keys.conf
+++ b/hypr/configs/settings/keys.conf
@@ -31,7 +31,6 @@ device {
 }
 
 ### KEYBINDINGS ###
-###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
@@ -118,3 +117,5 @@ bind = Control_L, Print, exec, ~/.config/hypr/configs/scripts/ocr.sh
 
 # Waybar Toggle
 bind = $mainMod, B, exec, killall -SIGUSR1 waybar
+
+bind = $mainMod, tab, overview:toggle 
