--- a/hypr/configs/settings/monitor.conf
+++ b/hypr/configs/settings/monitor.conf
@@ -1,2 +1,2 @@
-monitor=HDMI-A-1,1920x1080@100,0x0,1
-monitor=DP-1,1920x1080@60,-1920x0,1
+monitor=HDMI-A-1,1920x1080@100,1920x0,1
+monitor=DP-1,1920x1080@60,0x0,1
