Add keepass, hyprsession, and hyprpm execs

--- a/hypr/configs/settings/exec.conf
+++ b/hypr/configs/settings/exec.conf
@@ -1,6 +1,6 @@
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hypridle&\
-            swaybg -i ~/Pictures/Wallpaper/Ali\ Kazal\ -\ Mountain.png
+exec-once = swaybg -i ~/Pictures/Wallpaper/Ali\ Kazal\ -\ Mountain.png
 exec-once = gnome-keyring-daemon --start --components=secrets 
-exec-once = waybar & fcitx5 & swaync
+exec-once = waybar & fcitx5 & swaync & hypridle & hyprsession & hyprpm reload
 exec-once = /usr/bin/nextcloud
+exec-once = sleep 3 && /usr/bin/keepassxc
