Fix syntax errors caused by hyprland update

--- a/hypr/configs/appearances/decoration.conf
+++ b/hypr/configs/appearances/decoration.conf
@@ -23,8 +23,7 @@ decoration {
     }
 }
 
-layerrule = ignorezero, wofi
-layerrule = blur, waybar 
-layerrule = blur, wofi
+layerrule = ignore_alpha 0, blur on, match:namespace wofi
+layerrule = blur on, match:namespace waybar 
 # layerrule = ignorealpha 0.5, wofi
-# layerrule = shadow, wofi
+# layerrule = shadow on, match:class wofi
