--- a/hypr/configs/settings/window.conf
+++ b/hypr/configs/settings/window.conf
@@ -1,13 +1,3 @@
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
 windowrulev2 = noshadow, focus:0
 windowrulev2 = noborder, floating:1
 
@@ -17,9 +7,10 @@ windowrulev2 = noborder, floating:1
 # Smart Gaps
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule = border_size 0, match:float 0, match:workspace w[tv1]
+windowrule = rounding 0, match:float 0, match:workspace w[tv1]
+windowrule = border_size 0, match:float 0, match:workspace f[1]
+windowrule = rounding 0, match:float 0, match:workspace f[1]
 
-# windowrule = shadow:true, class:mako
+windowrule = match:class ^(org.keepassxc.KeePassXC), float on 
+windowrule = match:class ^(Nextcloud), float on 
